# VulkanRayTracing

./: .clang-format  .gitignore  CMakeLists.txt  README.md
source/: CMakeLists.txt  graph_ray_tracing.json  main.cpp
source/graphics/: asynchronous_loader.cpp  asynchronous_loader.hpp  command_buffer.cpp  command_buffer.hpp  frame_graph.cpp  frame_graph.hpp  gltf_scene.cpp  gltf_scene.hpp  gpu_device.cpp  gpu_device.hpp  gpu_enum.hpp  gpu_profiler.cpp  gpu_profiler.hpp  gpu_resources.cpp  gpu_resources.hpp  hydra_imgui.cpp  hydra_imgui.hpp  obj_scene.cpp  obj_scene.hpp  render_resources_loader.cpp  render_resources_loader.hpp  render_scene.cpp  render_scene.hpp  renderer.cpp  renderer.hpp  scene_graph.cpp  scene_graph.hpp  spirv_parser.cpp  spirv_parser.hpp
source/hydra/application/: application.cpp  application.hpp  game_application.cpp  game_application.hpp  game_camera.cpp  game_camera.hpp  input.cpp  input.hpp  keys.cpp  keys.hpp  window.cpp  window.hpp
source/hydra/foundation/: array.hpp  assert.hpp  bit.cpp  bit.hpp  blob.hpp  blob_serialization.cpp  blob_serialization.hpp  camera.cpp  camera.hpp  color.cpp  color.hpp  data_structures.cpp  data_structures.hpp  file.cpp  file.hpp  gltf.cpp  gltf.hpp  hash_map.hpp  log.cpp  log.hpp  memory.cpp  memory.hpp  memory_utils.hpp  numerics.cpp  numerics.hpp  platform.hpp  process.cpp  process.hpp  relative_data_structures.hpp  resource_manager.cpp  resource_manager.hpp  serialization.cpp  serialization.hpp  service.hpp  service_manager.cpp  service_manager.hpp  string.cpp  string.hpp  time.cpp  time.hpp
source/shaders/: culling.h  culling.json  ddgi.h  ddgi.json  debug.json  debug_rendering.h  fullscreen.glsl  fullscreen.json  lighting.h  main.json  mesh.h  meshlet.glsl  meshlet.h  meshlet.json  pbr.glsl  pbr_lighting.json  reflections.json  scene.h
